# ads-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly-eval.yml
scripts/: ingest_sample_docs.py
src/ads_agent/: __init__.py  cli.py
src/ads_agent/agents/: common.py  state.py
src/ads_agent/agents/analysis/: nodes.py  prompts.py
src/ads_agent/agents/research/: nodes.py  prompts.py
src/ads_agent/agents/supervisor/: graph.py  nodes.py  prompts.py
src/ads_agent/agents/writer/: nodes.py  prompts.py
src/ads_agent/api/: __init__.py  dependencies.py  exceptions.py  main.py  middleware.py
src/ads_agent/api/v1/: __init__.py  router.py  schemas.py
src/ads_agent/application/services/: decision_service.py  evaluation_runner.py  evaluation_service.py
src/ads_agent/core/: settings.py  tech_docs.py
src/ads_agent/core/entities/: __init__.py  chunk.py  decision_report.py  decision_request.py  execution_receipt.py
src/ads_agent/core/ports/: __init__.py  vector_store.py
src/ads_agent/infrastructure/: asyncio_compat.py  checkpointer.py  health.py
src/ads_agent/infrastructure/llm/: __init__.py  client.py  schemas.py
src/ads_agent/infrastructure/mcp/: __init__.py  __main__.py  client.py  docs.py  extract.py  http.py  logging_config.py  search.py  server.py  url_validator.py
src/ads_agent/infrastructure/observability/: tracer.py
src/ads_agent/infrastructure/persistence/: __init__.py  decision_run_store.py
src/ads_agent/infrastructure/vector_store/: __init__.py  chunker.py  connection.py  ingestion.py  retriever.py  schema.sql
tests/: conftest.py  test_bootstrap.py
tests/fixtures/: golden_dataset.json  load_golden_dataset.py
tests/integration/: test_langfuse_tracing.py  test_llm_pipeline.py  test_mcp_web_search.py  test_quality_gate.py
tests/integration/api/: conftest.py  test_api_e2e_mocked.py  test_api_e2e_real.py  test_health_postgres.py
tests/integration/vector_store/: test_ingestion_retrieval.py
tests/unit/: conftest.py  test_cli.py  test_entities.py  test_evaluation_fire_and_forget.py  test_golden_smoke.py  test_graph_routing.py
tests/unit/agents/: test_analysis_node.py  test_research_node.py  test_supervisor_llm.py  test_writer_node.py
tests/unit/api/: conftest.py  test_decisions.py  test_exceptions.py  test_health.py  test_schemas.py
tests/unit/application/: test_evaluation_service.py
tests/unit/core/: test_tech_docs.py
tests/unit/infrastructure/: test_llm_client.py  test_tracer.py
tests/unit/infrastructure/mcp/: test_server_tools.py  test_url_security.py
tests/unit/infrastructure/vector_store/: test_chunker.py  test_rrf.py
