[project]
name = "ads-agent"
version = "0.1.0"
description = "Architecture Decision Support — Multi-agent system for technical decision intelligence"
readme = "README.md"
authors = [
    { name = "Luis Solarte Moncayo" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-litellm>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langfuse>=4.7.1",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-prebuilt>=1.1.0",
    "litellm>=1.86.2",
    "mcp>=1.27.2",
    "numpy>=2.0.0",
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.19.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.15",
]


# ===========================================================================
# Configurations
# ===========================================================================

[project.scripts]
ads-agent = "ads_agent.cli:main"
ads-agent-mcp = "ads_agent.infrastructure.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ads_agent"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = [
    "E501",   # Line too long — handled by formatter
    "B008",   # Do not perform function calls in default args (FastAPI pattern)
    "RUF012", # Mutable class attributes — intentional in some cases
]

[tool.ruff.lint.isort]
known-first-party = ["ads_agent"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # assert statements are fine in tests
    "N802",  # lowercase function names in tests
]
"src/ads_agent/agents/state.py" = [
    "TC001",  # LangGraph resolves TypedDict annotations at runtime
    "TC002",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Pure unit tests with no external dependencies",
    "integration: Tests that require external services (DB, LLM APIs)",
    "e2e: End-to-end tests for full workflow validation",
    "slow: Tests that take more than 5 seconds",
]

[tool.coverage.run]
source = ["src/ads_agent"]
omit = ["*/tests/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
